continue new directory structure with the build still working
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1609609 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/hazelcast/gui/pom.xml
+++ b/plugins/hazelcast/gui/pom.xml
@@ -92,7 +92,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sirona</groupId>
-      <artifactId>sirona-reporting</artifactId>
+      <artifactId>sirona-reporting-webapp</artifactId>
       <version>${project.version}</version>
       <classifier>classes</classifier>
       <scope>test</scope>
