temporary to have the build still working
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1609610 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/pom.xml
+++ b/server/reporting/reporting-ui/pom.xml
@@ -28,4 +28,18 @@
   <name>Apache Sirona Incubator :: Server :: Reporting :: Ui</name>
   <packaging>war</packaging>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <configuration>
+            <failOnMissingWebXml>false</failOnMissingWebXml>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
 </project>
