--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -18,7 +18,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.apache.sirona</groupId>
-    <artifactId>sirona</artifactId>
+    <artifactId>sirona-server</artifactId>
     <version>0.3-incubating-SNAPSHOT</version>
   </parent>
 
