better use of dependencyManagement
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1611548 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-api/pom.xml
+++ b/server/reporting/reporting-api/pom.xml
@@ -28,4 +28,11 @@
   <name>Apache Sirona Incubator :: Server :: Reporting :: Api</name>
   <packaging>jar</packaging>
 
+  <dependencies>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>jsr311-api</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
