--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -41,6 +41,11 @@
         <artifactId>sirona-reporting-api</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>jsr311-api</artifactId>
+        <version>1.1.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
