--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ target
 out/
 agent/javaagent/dependency-reduced-pom.xml
 .java-version
+.project
+.settings/
+.classpath
 
 ## local testing files 
 agentToTomcat.sh
