https://github.com/apache/sirona/pull/2 Added .classpath, .settings/ and .project eclipse-related files to .gitignore
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1613327 13f79535-47bb-0310-9956-ffa450edef68

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ out/
 agent/javaagent/dependency-reduced-pom.xml
 .java-version
 
+.project
+.settings/
+.classpath
+
 ## local testing files 
 agentToTomcat.sh
 server/reporting/src/test/sirona.properties
