servlet 3.0 and use web fragments
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616190 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-api/pom.xml
+++ b/server/reporting/reporting-api/pom.xml
@@ -37,6 +37,10 @@
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-web</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
