--- a/server/reporting/reporting-api/src/main/resources/WEB-INF/lib/web.xml
+++ b/server/reporting/reporting-api/src/main/resources/WEB-INF/lib/web.xml
@@ -20,41 +20,9 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-  <context-param> <!-- only register this webapp gauges -->
-    <param-name>monitoring.discovery.packages</param-name>
-    <param-value>org.apache.sirona.reporting.web.plugin</param-value>
-  </context-param>
-
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>
-      classpath*:META-INF/spring-context.xml, /WEB-INF/applicationContext.xml
-    </param-value>
-  </context-param>
-
   <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    <listener-class>org.apache.sirona.web.discovery.GaugeDiscoveryListener</listener-class>
   </listener>
 
-  <filter>
-    <filter-name>Monitoring</filter-name>
-    <filter-class>org.apache.sirona.reporting.web.SironaController</filter-class>
-  </filter>
-
-  <filter-mapping>
-    <filter-name>Monitoring</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
-  <servlet>
-    <servlet-name>CXFServlet</servlet-name>
-    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>CXFServlet</servlet-name>
-    <url-pattern>/restServices/*</url-pattern>
-  </servlet-mapping>
 
 </web-app>
