introduce sb admin part
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616192 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/pom.xml
+++ b/server/reporting/reporting-ui/pom.xml
@@ -38,6 +38,10 @@
       <artifactId>sirona-core</artifactId>
       <scope>provided</scope> <!-- using to put it in the container to get JDBC monitoring and deploy the webapp -->
     </dependency>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-reporting-api</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
