adding hack to be able to develop the UI without having dependency this is really a pain this decoupling this.
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616195 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/pom.xml
+++ b/server/reporting/pom.xml
@@ -32,6 +32,9 @@
     <tomcatRunPort>8080</tomcatRunPort>
     <tomcatRunPath>/sirona</tomcatRunPath>
     <sirona.properties.path>${basedir}/src/test/sirona.properties</sirona.properties.path>
+    <cxf.version>3.0.1</cxf.version>
+    <jacksonVersion>2.4.1</jacksonVersion>
+    <spring.version>4.0.6.RELEASE</spring.version>
   </properties>
 
   <modules>
@@ -55,7 +58,7 @@
       <dependency>
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-        <version>3.0.1</version>
+        <version>${cxf.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
