--- a/server/reporting/reporting-webapp/pom.xml
+++ b/server/reporting/reporting-webapp/pom.xml
@@ -30,7 +30,6 @@
 
   <properties>
     <sirona.reporting.tomcat.skip>false</sirona.reporting.tomcat.skip>
-    <jacksonVersion>2.4.1</jacksonVersion>
   </properties>
 
   <dependencies>
@@ -71,7 +70,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>4.0.6.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
