the reporting ui web.xml must be empty && fix missing license header
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1616198 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/pom.xml
+++ b/server/reporting/reporting-ui/pom.xml
@@ -83,6 +83,17 @@
   </dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <configuration>
+            <webXml>${basedir}/src/main/web/web.xml</webXml>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
