--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,15 @@
             <exclude>**/resources/css/*.css</exclude>
             <exclude>**/META-INF/services/*</exclude>
             <exclude>**/resources/resources/**/*</exclude>
+            <exclude>src/main/webapp/css/bootstrap**</exclude>
+            <exclude>src/main/webapp/css/plugins/morris.css</exclude>
+            <exclude>src/main/webapp/font-awesome-4.1.0/**</exclude>
+            <exclude>src/main/webapp/fonts/**</exclude>
+            <exclude>src/main/webapp/js/angular**</exclude>
+            <exclude>src/main/webapp/js/bootstrap**</exclude>
+            <exclude>src/main/webapp/js/jquery**</exclude>
+            <exclude>src/main/webapp/js/plugins/**</exclude>
+            <exclude>src/main/webapp/js/require-*.js</exclude>
           </excludes>
         </configuration>
         <executions>
