configure tomee plugin
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1618798 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-ui/pom.xml
+++ b/server/reporting/reporting-ui/pom.xml
@@ -135,6 +135,18 @@
           </dependency>
         </dependencies>
       </plugin>
+      <plugin>
+        <groupId>org.apache.openejb.maven</groupId>
+        <artifactId>tomee-maven-plugin</artifactId>
+        <version>1.6.0.2</version>
+        <configuration>
+          <tomeeVersion>1.6.0.2</tomeeVersion>
+          <tomeeClassifier>plus</tomeeClassifier>
+          <libs>
+            <lib>org.apache.sirona:sirona-core:${project.version}</lib>
+          </libs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
