add missing license headers
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1619010 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/reporting-api/pom.xml
+++ b/server/reporting/reporting-api/pom.xml
@@ -41,6 +41,10 @@
       <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-web</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
