--- a/agent/store/cube/pom.xml
+++ b/agent/store/cube/pom.xml
@@ -44,8 +44,15 @@
 
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.3.2</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.3.3</version>
+      <version>4.3.5</version>
       <optional>true</optional>
     </dependency>
 
@@ -59,7 +66,7 @@
     <dependency>
       <groupId>com.ning</groupId>
       <artifactId>async-http-client</artifactId>
-      <version>1.8.7</version>
+      <version>1.8.9</version>
       <optional>true</optional>
     </dependency>
 
