--- a/server/reporting/reporting-api/pom.xml
+++ b/server/reporting/reporting-api/pom.xml
@@ -45,6 +45,10 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
