--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,7 @@
             <exclude>src/main/webapp/font-awesome-4.1.0/**</exclude>
             <exclude>src/main/webapp/fonts/**</exclude>
             <exclude>src/main/webapp/css/ng-grid.*.css</exclude>
+            <exclude>src/main/webapp/css/abn_tree*.css</exclude>
             <exclude>src/main/webapp/js/angular**</exclude>
             <exclude>src/main/webapp/js/bootstrap**</exclude>
             <exclude>src/main/webapp/js/jquery**</exclude>
@@ -277,6 +278,7 @@
             <exclude>src/main/webapp/js/moment-*.min.js</exclude>
             <exclude>src/main/webapp/js/ui-bootstrap-tpls-*.js</exclude>
             <exclude>src/main/webapp/js/ng-grid-*.debug.js</exclude>
+            <exclude>src/main/webapp/js/abn_tree_directive.js</exclude>
           </excludes>
         </configuration>
         <executions>
