don't package configuration otherwise users inherit from it
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1642162 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -108,6 +108,9 @@
           </execution>
         </executions>
         <configuration>
+          <excludes> <!-- packaged to be reusable => don't reuse the test config -->
+            <exclude>**/sirona.properties</exclude>
+          </excludes>
           <archive>
             <manifestEntries>
               <Premain-Class>${agent.class}</Premain-Class>
