use a special version for 1.5 branch
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1653492 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/store/pom.xml
+++ b/server/store/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona-server</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.3-incubating-SNAPSHOT</version>
+    <version>0.3_1.5-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-collector-store</artifactId>
