--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <groupId>org.apache.sirona</groupId>
   <artifactId>sirona</artifactId>
-  <version>0.3-incubating-SNAPSHOT</version>
+  <version>0.3_1.5-incubating-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Sirona Incubator</name>
   <url>http://sirona.incubator.apache.org/docs/${project.version}</url>
