fix target/source with 1.5
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1653493 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -573,6 +573,10 @@
   <profiles>
     <profile>
       <id>jenkins</id>
+      <properties>
+        <maven.compiler.source>1.5</maven.compiler.source>
+        <maven.compiler.target>1.5</maven.compiler.target>
+      </properties>
       <build>
         <plugins>
           <plugin>
