--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
   </distributionManagement>
 
   <modules>
+    <module>api</module>
     <module>core</module>
     <module>agent</module>
     <module>plugins</module>
@@ -88,7 +89,7 @@
       <id>olamy</id>
       <name>Olivier Lamy</name>
       <email>olamy@apache.org</email>
-      <organization>Ecetera.com.au</organization>
+      <organization>ASF</organization>
       <roles>
         <role>PMC Member</role>
       </roles>
@@ -382,6 +383,11 @@
         <artifactId>geronimo-servlet_3.0_spec</artifactId>
         <version>1.0</version>
         <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.sirona</groupId>
+        <artifactId>sirona-api</artifactId>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.sirona</groupId>
