move memory storage in a separate module
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1653503 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -30,6 +30,13 @@
 
   <description>Contains some interfaces and classes of the Sirona Api</description>
 
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+  </dependencies>
+
   <profiles>
     <profile>
       <id>jenkins-1.5</id>
