--- a/core/pom.xml
+++ b/core/pom.xml
@@ -41,6 +41,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-store-memory</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
       <version>3.2</version>
