--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
 
     <sonar.host.url>https://analysis.apache.org/</sonar.host.url>
     <maven.compiler.source>1.6</maven.compiler.source>
+    <!-- this one is for animal sniffer -->
+    <java.runtime>16</java.runtime>
     <maven.compiler.target>1.6</maven.compiler.target>
 
     <tomcat.version>7.0.50</tomcat.version>
@@ -347,6 +349,26 @@
           </packagingExcludes>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>animal-sniffer-maven-plugin</artifactId>
+        <version>1.13</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <signature>
+            <groupId>org.codehaus.mojo.signature</groupId>
+            <artifactId>java${java.runtime}</artifactId>
+            <version>1.0</version>
+          </signature>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -442,6 +464,13 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.4</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>animal-sniffer-annotations</artifactId>
+        <version>1.13</version>
+        <scope>compile</scope>
       </dependency>
 
       <dependency>
