--- a/server/collector/pom.xml
+++ b/server/collector/pom.xml
@@ -45,6 +45,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-store-memory</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
       <artifactId>sirona-reporting-webapp</artifactId>
       <version>${project.version}</version>
       <classifier>classes</classifier>
