use better package naming for memory store
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1653516 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/store/cube/src/test/resources/sirona.properties
+++ b/agent/store/cube/src/test/resources/sirona.properties
@@ -21,6 +21,6 @@ org.apache.sirona.cube.CubeBuilder.collector = http://localhost:1234/1.0/event/p
 org.apache.sirona.core.gauge.activated = false
 
 
-org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
+org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.store.memory.tracking.InMemoryPathTrackingDataStore
 
-org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
+org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.memory.tracking.InMemoryPathTrackingDataStore
