--- a/server/collector/src/test/resources/sirona.properties
+++ b/server/collector/src/test/resources/sirona.properties
@@ -21,6 +21,10 @@ org.apache.sirona.cube.CubeBuilder.marker = local
 
 org.apache.sirona.core.gauge.activated = false
 
-org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
+org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sirona.store.memory.tracking.InMemoryPathTrackingDataStore
 
-org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.tracking.InMemoryPathTrackingDataStore
+org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.memory.tracking.InMemoryPathTrackingDataStore
+
+org.apache.sirona.store.counter.CounterDataStore = org.apache.sirona.store.memory.counter.InMemoryCounterDataStore
+
+org.apache.sirona.store.counter.CollectorCounterStore = org.apache.sirona.store.memory.counter.InMemoryCollectorCounterStore
