--- a/server/collector/src/test/resources/sirona.properties
+++ b/server/collector/src/test/resources/sirona.properties
@@ -25,6 +25,8 @@ org.apache.sirona.store.tracking.CollectorPathTrackingDataStore = org.apache.sir
 
 org.apache.sirona.store.tracking.PathTrackingDataStore = org.apache.sirona.store.memory.tracking.InMemoryPathTrackingDataStore
 
-org.apache.sirona.store.counter.CounterDataStore = org.apache.sirona.store.memory.counter.InMemoryCounterDataStore
+org.apache.sirona.store.counter.CounterDataStore = org.apache.sirona.store.memory.counter.InMemoryCollectorCounterStore
 
-org.apache.sirona.store.counter.CollectorCounterStore = org.apache.sirona.store.memory.counter.InMemoryCollectorCounterStore
+#  org.apache.sirona.store.memory.counter.InMemoryCounterDataStore
+
+# org.apache.sirona.store.counter.CollectorCounterStore =
