--- a/agent/performance/jaxrs/cxf/pom.xml
+++ b/agent/performance/jaxrs/cxf/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>sirona-jaxrs</artifactId>
     <groupId>org.apache.sirona</groupId>
-    <version>0.3_1.5-incubating-SNAPSHOT</version>
+    <version>0.3-incubating-SNAPSHOT</version>
   </parent>
 
   <artifactId>sirona-jaxrs-cxf-26</artifactId>
