--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -33,6 +33,8 @@
     <asm.version>5.0.3</asm.version>
     <agent.class>org.apache.sirona.javaagent.SironaAgent</agent.class>
     <java.runtime>15</java.runtime>
+    <maven.compiler.source>1.5</maven.compiler.source>
+    <maven.compiler.target>1.5</maven.compiler.target>
   </properties>
 
   <dependencies>
