force compiler target for core
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1653772 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,6 +30,8 @@
 
   <properties>
     <java.runtime>15</java.runtime>
+    <maven.compiler.source>1.5</maven.compiler.source>
+    <maven.compiler.target>1.5</maven.compiler.target>
   </properties>
 
   <dependencies>
