implement passing array with method args to the Agent contxxt
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1657462 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/javaagent/pom.xml
+++ b/agent/javaagent/pom.xml
@@ -188,6 +188,7 @@
             <test.debug.remote>${test.debug.remote}</test.debug.remote>
             <project.build.directory>${project.build.directory}</project.build.directory>
             <sirona.agent.debug>${sirona.agent.debug}</sirona.agent.debug>
+            <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
           </systemPropertyVariables>
         </configuration>
       </plugin>
