--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -23,7 +23,7 @@ excludes = \
     prefix:junit, \
     prefix:org.junit, \
     prefix:com.apple, \
-    prefix:org.apache.test.sirona.javaagent.MockPathTrackingInvocationListener
+    prefix:org.apache.sirona.javaagent.listener.MockPathTrackingInvocationListener
 
 org.apache.sirona.javaagent.listener.PathTrackingListener.excludes = ${excludes}
 org.apache.sirona.javaagent.listener.CounterListener.excludes = ${excludes}
