--- a/agent/javaagent/src/test/resources/pathtracking/sirona.properties
+++ b/agent/javaagent/src/test/resources/pathtracking/sirona.properties
@@ -31,6 +31,6 @@ org.apache.sirona.javaagent.listener.CounterListener.excludes = ${excludes}
 org.apache.sirona.store.DataStoreFactory = org.apache.sirona.pathtracking.test.ExtDataStoreFactory
 org.apache.sirona.javaagent.path.tracking.activate=true
 
-org.apache.sirona.javaagent.method.paramaters.trace=true
+org.apache.sirona.javaagent.method.parameters.trace=true
 
 
