aop must 1.5 target too
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1658303 13f79535-47bb-0310-9956-ffa450edef68

--- a/agent/performance/aop/pom.xml
+++ b/agent/performance/aop/pom.xml
@@ -27,6 +27,12 @@
   <artifactId>sirona-aop</artifactId>
   <name>Apache Sirona Incubator :: Agent :: Performance :: AOP</name>
 
+  <properties>
+    <java.runtime>15</java.runtime>
+    <maven.compiler.source>1.5</maven.compiler.source>
+    <maven.compiler.target>1.5</maven.compiler.target>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.sirona</groupId>
@@ -43,4 +49,45 @@
       <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>jenkins-1.5</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-toolchains-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>toolchain</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <toolchains>
+                <jdk>
+                  <version>1.5</version>
+                  <vendor>sun</vendor>
+                </jdk>
+              </toolchains>
+            </configuration>
+          </plugin>
+        </plugins>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                <fork>true</fork>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
